--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <header>
-      <h1>Madison Chazo</h1>
+    <header id="top">
       <img
         src="assets/images/madison-witchhat.jpg"
         alt="selfie of a young person with brown hair and glasses wearing a witch hat"
+        id="profile-image"
       />
+      <h1>Madison Chazo</h1>
+      <!-- Want a line break between flex items -->
+      <div class="break"></div>
       <nav>
         <ul>
-          <li>About</li>
+          <li><a href="#about">About</a></li>
           <li>Work</li>
           <li>Contact</li>
         </ul>
