Add image formatting for work

--- a/index.html
+++ b/index.html
@@ -78,14 +78,17 @@
             /></a>
             <figcaption>Current Project No. 2</figcaption>
           </figure>
-          work in progress by Articon from
-          <a
-            href="https://thenounproject.com/browse/icons/term/work-in-progress/"
-            target="_blank"
-            title="work in progress Icons"
-            >Noun Project</a
-          >
-          (CC BY 3.0)
+          <div class="break"></div>
+          <p>
+            work in progress by Articon from
+            <a
+              href="https://thenounproject.com/browse/icons/term/work-in-progress/"
+              target="_blank"
+              title="work in progress Icons"
+              >Noun Project</a
+            >
+            (CC BY 3.0)
+          </p>
         </div>
         <h3>Past Work</h3>
         <div id="past">
