Adjust look of site, add media queries for smaller devices

--- a/index.html
+++ b/index.html
@@ -62,35 +62,47 @@
         <h3>Current Projects</h3>
         <div id="current">
           <figure>
-            <a href="https://www.madisonchazo.com"
-              ><img
-                src="assets/images/noun-work-in-progress.png"
-                alt="gears above loading bar"
-            /></a>
-            <figcaption>madisonchazo.com</figcaption>
+            <figcaption>madisonchazo.com<br />Ver. 2.0</figcaption>
+            <img
+              src="assets/images/noun-work-in-progress.png"
+              alt="gears above loading bar"
+            />
+            <p>
+              <!-- Attribution as required by icon license -->
+              work in progress by Articon from
+              <a
+                href="https://thenounproject.com/browse/icons/term/work-in-progress/"
+                target="_blank"
+                title="work in progress Icons"
+                >Noun Project</a
+              >
+              (CC BY 3.0)
+            </p>
           </figure>
-          <!-- placeholder for future projects -->
+          <!-- Placeholder for future projects -->
           <figure>
-            <a href="#"
-              ><img
-                src="assets/images/noun-work-in-progress.png"
-                alt="gears above loading bar"
-            /></a>
-            <figcaption>Current Project No. 2</figcaption>
+            <figcaption>Current Project<br />No. 2</figcaption>
+            <img
+              src="assets/images/noun-work-in-progress.png"
+              alt="gears above loading bar"
+            />
+            <p>
+              <!-- Attribution as required by icon license -->
+              work in progress by Articon from
+              <a
+                href="https://thenounproject.com/browse/icons/term/work-in-progress/"
+                target="_blank"
+                title="work in progress Icons"
+                >Noun Project</a
+              >
+              (CC BY 3.0)
+            </p>
           </figure>
+          <!-- Break between flex items -->
           <div class="break"></div>
-          <p>
-            work in progress by Articon from
-            <a
-              href="https://thenounproject.com/browse/icons/term/work-in-progress/"
-              target="_blank"
-              title="work in progress Icons"
-              >Noun Project</a
-            >
-            (CC BY 3.0)
-          </p>
         </div>
-        <h3>Past Work</h3>
+        <h3>Past Projects</h3>
+        <!-- Note: all past work images should be 4:3 for consistency -->
         <div id="past">
           <figure>
             <a href="https://madchazo.github.io/MP1-landing-page/"
@@ -100,6 +112,8 @@
             /></a>
             <figcaption>Practice Website - ACME Corp. landing page</figcaption>
           </figure>
+          <!-- Break between flex items -->
+          <div class="break"></div>
           <figure>
             <a href="https://madchazo.github.io/HW1-code-refactor/"
               ><img
@@ -131,7 +145,8 @@
         <h2>Contact</h2>
         <ul>
           <li>
-            <span class="cheader">Website</span><br /><a href="madisonchazo.com"
+            <span class="cheader">Website</span><br /><a
+              href="https://www.madisonchazo.com"
               >madisonchazo.com</a
             >
           </li>
