--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
         <!-- Note: all past work images should be 4:3 for consistency -->
         <div id="past">
           <figure>
+            <a href="https://madchazo.github.io/P1-pokedisple/"
+              ><img
+                src="assets/images/P1-Screenshot.png"
+                alt="screenshot of PokeDisple website showing a header and an image of scattered Pokemon cards"
+            /></a>
+            <figcaption>Past Project No. 3</figcaption>
+          </figure>
+          <!-- Break between flex items -->
+          <div class="break"></div>
+          <figure>
             <a href="https://madchazo.github.io/MP1-landing-page/"
               ><img
                 src="assets/images/MP1-Screenshot.png"
@@ -112,8 +122,6 @@
             /></a>
             <figcaption>Practice Website - ACME Corp. landing page</figcaption>
           </figure>
-          <!-- Break between flex items -->
-          <div class="break"></div>
           <figure>
             <a href="https://madchazo.github.io/HW1-code-refactor/"
               ><img
@@ -122,14 +130,6 @@
             /></a>
             <figcaption>Boot Camp Homework - Code Refactor</figcaption>
             <!-- Placeholders for future projects -->
-          </figure>
-          <figure>
-            <a href="#"
-              ><img
-                src="assets/images/HW1-Screenshot.png"
-                alt="screenshot of website showing a header and a hero image of people collaborating in an office"
-            /></a>
-            <figcaption>Past Project No. 3</figcaption>
           </figure>
           <figure>
             <a href="#"
