Change caption of PokeDisple project

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
             <a href="https://madchazo.github.io/P1-pokedisple/"
               ><img
                 src="assets/images/P1-Screenshot.png"
-                alt="screenshot of PokeDisple website showing a header and an image of scattered Pokemon cards"
+                alt="screenshot of the PokéDisplé website showing a header and an image of scattered Pokemon cards"
             /></a>
-            <figcaption>Past Project No. 3</figcaption>
+            <figcaption>PokéDisplé - Pokémon card search website</figcaption>
           </figure>
           <!-- Break between flex items -->
           <div class="break"></div>
